fix. QQ音乐重启后无法自动登录 feat. 加入歌曲详情页链接复制